force-app/main/default/objects/Opportunity/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>