force-app/main/default/objects/Opportunity/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <description>Used to determine which type of mortgage application is being submitted.
Used in Opportunity | Mortgage | Process Controller flow.</description>
    <label>Application type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Fast Tracked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>