force-app/main/default/objects/Opportunity/fields/Assets_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Assets_Liabilities__c</fullName>
    <description>Duplicate of Meeting_Assets_Liabilities__c. Record high level detail of any assets and liabilities the client has</description>
    <label>Assets &amp; liabilities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>