force-app/main/default/objects/Opportunity/fields/Assigned_partner_filter__c.field-meta.xml
<CustomField>
    <fullName>Assigned_partner_filter__c</fullName>
    <description>This field is checked when the logged in user is the assigned partner. This field is used to create the list views for Partners</description>
    <formula>IF(   OwnerId   = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner = Logged in user</label>
    <type>Checkbox</type>
</CustomField>