force-app/main/default/objects/Opportunity/fields/Call_notes_taken_by__c.field-meta.xml
<CustomField>
    <fullName>Call_notes_taken_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User of the team member watching the disco call and taking notes</description>
    <label>Call notes taken by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>