force-app/main/default/objects/Opportunity/fields/Client_1_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Client_1_Question_1__c</fullName>
    <description>Imagine you have no financial worries. Money&apos;s not an issue, and it won&apos;t be for the rest of your life. 
How would you live your life?
And what would you do with your money?</description>
    <inlineHelpText>Imagine you have no financial worries. Money&apos;s not an issue, and it won&apos;t be for the rest of your life. 
How would you live your life?
And what would you do with your money?</inlineHelpText>
    <label>Client 1 question 1</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>