force-app/main/default/objects/Opportunity/fields/Client_1_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Client_1_Question_2__c</fullName>
    <description>A fortune cookie tells you that you only have five years left to live. You throw it away and get on with your meal. But just imagine for a second that this was true. 
How would you spend these final years?
What would you do with the time you have left?</description>
    <inlineHelpText>A fortune cookie tells you that you only have five years left to live. You throw it away and get on with your meal. But just imagine for a second that this was true. 
How would you spend these final years?
What would you do with the time you have left?</inlineHelpText>
    <label>Client 1 question 2</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>