force-app/main/default/objects/Opportunity/fields/Client_1_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Client_1_Question_3__c</fullName>
    <description>Now imagine it was just one day. 
What do you wish you&apos;d done - or done differently?
What dreams will be left unfilled?</description>
    <inlineHelpText>Now imagine it was just one day. 
What do you wish you&apos;d done - or done differently?
What dreams will be left unfilled?</inlineHelpText>
    <label>Client 1 question 3</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>