force-app/main/default/objects/Opportunity/fields/Client_Met_Face_to_Face_Updated__c.field-meta.xml
<CustomField>
    <fullName>Client_Met_Face_to_Face_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if partner has met client face to face</description>
    <inlineHelpText>You need to update the &apos;Seen by Partner&apos; field on their Person Account</inlineHelpText>
    <label>Client met face to face updated</label>
    <type>Checkbox</type>
</CustomField>