force-app/main/default/objects/Opportunity/fields/Client_Vulnerability_Updated__c.field-meta.xml
<CustomField>
    <fullName>Client_Vulnerability_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Potentially unused now - super-seeded by vulnerability process. Indicate if vulnerability has been evaluated and logged in on the clients.</description>
    <inlineHelpText>You need to update the vulnerability section on their Person Account</inlineHelpText>
    <label>Client vulnerability updated</label>
    <type>Checkbox</type>
</CustomField>