force-app/main/default/objects/Opportunity/fields/Completed_Sign_up__c.field-meta.xml
<CustomField>
    <fullName>Completed_Sign_up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Funnel Reporting</description>
    <label>Completed sign-up</label>
    <type>Checkbox</type>
</CustomField>