force-app/main/default/objects/Opportunity/fields/ConflictOfInterestAssessed__c.field-meta.xml
<CustomField>
    <fullName>ConflictOfInterestAssessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the partner evaluated if this client currently has any conflicts of interest</description>
    <label>Conflict of interest assessed</label>
    <type>Checkbox</type>
</CustomField>