force-app/main/default/objects/Opportunity/fields/Connect_with_prospects_on_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Connect_with_prospects_on_LinkedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has partner connected with client on LinkedIn?</description>
    <label>Connect &amp; add LinkedIn to person account</label>
    <type>Checkbox</type>
</CustomField>