force-app/main/default/objects/Opportunity/fields/DataMigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>DataMigrationStatus__c</fullName>
    <description>Legacy field - Unused. Marked for delete</description>
    <label>Data migration status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migrated</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>