force-app/main/default/objects/Opportunity/fields/Date_Converted__c.field-meta.xml
<CustomField>
    <fullName>Date_Converted__c</fullName>
    <description>Date and time opportunity was won</description>
    <label>Date converted</label>
    <type>DateTime</type>
</CustomField>