force-app/main/default/objects/Opportunity/fields/Date_scope_of_advice_accepted__c.field-meta.xml
<CustomField>
    <fullName>Date_scope_of_advice_accepted__c</fullName>
    <description>Date scope of advice was accepted</description>
    <label>Date scope of advice accepted</label>
    <type>Date</type>
</CustomField>