force-app/main/default/objects/Opportunity/fields/Date_scope_of_advice_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_scope_of_advice_sent__c</fullName>
    <description>Date scope of advice was sent</description>
    <label>Date scope of advice sent</label>
    <type>Date</type>
</CustomField>