force-app/main/default/objects/Opportunity/fields/Days_to_Lost__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Lost__c</fullName>
    <description>Days to lost from Created date</description>
    <formula>CEILING(
(Lost_Date__c  -  CreatedDate)/7
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks to lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>