force-app/main/default/objects/Opportunity/fields/Days_to_Scope_Signed__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Scope_Signed__c</fullName>
    <description>Weeks from Lead created &gt; Scope Signed</description>
    <formula>CEILING(
 (DATETIMEVALUE(Date_scope_of_advice_accepted__c) -   DATETIMEVALUE(Account.Lead_Created_Date__c))  /7
)</formula>
    <label>Lead Created &gt; Scope Signed (Wks)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>