force-app/main/default/objects/Opportunity/fields/DB_Pension_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>DB_Pension_Mentioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was DB transfer advice mentioned on discovery call?</description>
    <label>DB transfer advice mentioned (call)</label>
    <type>Checkbox</type>
</CustomField>