force-app/main/default/objects/Opportunity/fields/DB_Transfer_Advice_Mentioned_Meeting__c.field-meta.xml
<CustomField>
    <fullName>DB_Transfer_Advice_Mentioned_Meeting__c</fullName>
    <description>Was DB transfer advice mentioned on discovery meeting?</description>
    <label>DB transfer advice mentioned (Meeting)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>