force-app/main/default/objects/Opportunity/fields/DC_Family__c.field-meta.xml
<CustomField>
    <fullName>DC_Family__c</fullName>
    <description>Family notes from Discovery Call</description>
    <label>Family</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>