force-app/main/default/objects/Opportunity/fields/Disco_w__c.field-meta.xml
<CustomField>
    <fullName>Disco_w__c</fullName>
    <description>Can discovery call be used when training internal staff</description>
    <label>Disco can be used for training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>