force-app/main/default/objects/Opportunity/fields/Discovery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has discovery call been completed?</description>
    <label>Discovery completed</label>
    <type>Checkbox</type>
</CustomField>