force-app/main/default/objects/Opportunity/fields/Discovery_Deck_Planner__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Deck_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discovery Deck Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>