force-app/main/default/objects/Opportunity/fields/Discovery_Deck_Started__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Deck_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This signals that the &quot;Create Baseline Voyant Report&quot; task has generated and the process has begun. If checked it prevents any duplicate tasks being created</description>
    <label>Discovery deck started</label>
    <type>Checkbox</type>
</CustomField>