force-app/main/default/objects/Opportunity/fields/Discovery_Deck_Status__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Deck_Status__c</fullName>
    <label>Discovery Deck Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Partner Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Create Advised Line</fullName>
                <isActive>false</isActive>
                <label>Create Advised Line</label>
            </value>
            <value>
                <fullName>Create Base Line</fullName>
                <isActive>false</isActive>
                <label>Create Base Line</label>
            </value>
            <value>
                <fullName>Create Lifeline</fullName>
                <isActive>false</isActive>
                <label>Create Lifeline</label>
            </value>
            <value>
                <fullName>Discuss with Partner</fullName>
                <isActive>false</isActive>
                <label>Discuss with Head Planner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>