force-app/main/default/objects/Opportunity/fields/Discovery_Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Meeting_Date_Time__c</fullName>
    <description>Date/time the discovery meeting took place</description>
    <label>Discovery meeting date/time</label>
    <type>DateTime</type>
</CustomField>