force-app/main/default/objects/Opportunity/fields/Discovery_Meeting_recording_saved__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Meeting_recording_saved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the discovery meeting recording been saved in Google Drive?</description>
    <label>Discovery meeting recording saved</label>
    <type>Checkbox</type>
</CustomField>