force-app/main/default/objects/Opportunity/fields/Discovery_Meeting_transcript_saved__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Meeting_transcript_saved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discovery Meeting transcript saved</label>
    <type>Checkbox</type>
</CustomField>