force-app/main/default/objects/Opportunity/fields/Discovery_Questionnaire_Client_Link__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Questionnaire_Client_Link__c</fullName>
    <description>Unused. Potentially delete.</description>
    <inlineHelpText>This is the link that should be sent to the client</inlineHelpText>
    <label>Discovery questionnaire client link</label>
    <type>Url</type>
</CustomField>