force-app/main/default/objects/Opportunity/fields/Discovery_Questionnaire_Created__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Questionnaire_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has discovery questionnaire been created?</description>
    <inlineHelpText>If checked, a discovery questionnaire has been create, or sent to the client. This will block any further questionnaire being sent/created. If you want to send/create a new one, uncheck this box.</inlineHelpText>
    <label>Discovery questionnaire created</label>
    <type>Checkbox</type>
</CustomField>