force-app/main/default/objects/Opportunity/fields/Discovery_Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Questionnaire_Status__c</fullName>
    <label>Discovery Questionnaire Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>