force-app/main/default/objects/Opportunity/fields/Est_Liquid_Assets__c.field-meta.xml
<CustomField>
    <fullName>Est_Liquid_Assets__c</fullName>
    <description>An estimate of the client&apos;s liquid assets. This is updated after the Discovery Call, Discovery Questionnaire and the Discovery Meeting. This can also be updated manually at any time. This is used for forecasting.</description>
    <label>Est liquid assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>