force-app/main/default/objects/Opportunity/fields/Exclude_From_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field on the object that has no clear process for use and should be deleted. Hidden from pages 19 Jan 2023. 

Former description: &quot;Excludes the record from any reporting&quot;</description>
    <label>zDel - Exclude From Reporting</label>
    <type>Checkbox</type>
</CustomField>