force-app/main/default/objects/Opportunity/fields/Fact_Find__c.field-meta.xml
<CustomField>
    <fullName>Fact_Find__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Potentially delete? Link to fact find object</description>
    <label>Discovery questionnaire</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Household_Account__c</field>
            <operation>equals</operation>
            <valueField>Fact_Find__c.FF_Household__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fact_Find__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>