force-app/main/default/objects/Opportunity/fields/Family_health__c.field-meta.xml
<CustomField>
    <fullName>Family_health__c</fullName>
    <description>Record free notes on client&apos;s family and health obtained from discovery meeting</description>
    <label>Family &amp; health</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>