force-app/main/default/objects/Opportunity/fields/FastTrackReason__c.field-meta.xml
<CustomField>
    <fullName>FastTrackReason__c</fullName>
    <description>This field is used to capture a reason why a fast tracked advice opportunity process is used, bypassing discovery.</description>
    <label>Fast Track Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior policy holder turning 18</fullName>
            </value>
            <value>
                <fullName>Child of client without junior products</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Employee execution only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>