force-app/main/default/objects/Opportunity/fields/Household_Account__c.field-meta.xml
<CustomField>
    <fullName>Household_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The account selected in the household field must be a household. 

(Admin message: lookup filter criteria not met on Household account on the opportunity object)</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesHousehold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (HA)</relationshipLabel>
    <relationshipName>Household_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>