force-app/main/default/objects/Opportunity/fields/Income_expenditure__c.field-meta.xml
<CustomField>
    <fullName>Income_expenditure__c</fullName>
    <label>Income &amp; expenditure</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>