force-app/main/default/objects/Opportunity/fields/Initial_percent__c.field-meta.xml
<CustomField>
    <fullName>Initial_percent__c</fullName>
    <inlineHelpText>The % that is to be charged on transfers 0-2%</inlineHelpText>
    <label>Initial transfer charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>