force-app/main/default/objects/Opportunity/fields/is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>is_Test_Record__c</fullName>
    <description>Checks the Household and Person Account to see if this is a test account</description>
    <formula>OR(
FinServ__Household__r.Test_Record__c = true,
 Account.Test_Record__c = true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Test Record</label>
    <type>Checkbox</type>
</CustomField>