force-app/main/default/objects/Opportunity/fields/Last_Client_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Action__c</fullName>
    <description>Last client action on the fact find</description>
    <label>Last Client Action</label>
    <type>DateTime</type>
</CustomField>