force-app/main/default/objects/Opportunity/fields/Last_Client_Action_new__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Action_new__c</fullName>
    <formula>Fact_Find__r.FP_Last_client_action__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Client Action</label>
    <type>Date</type>
</CustomField>