force-app/main/default/objects/Opportunity/fields/Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Long_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Distinguish from hot to long term opportunities in rescheduling</description>
    <label>Long Term</label>
    <type>Checkbox</type>
</CustomField>