force-app/main/default/objects/Opportunity/fields/Lost_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lost_Notes__c</fullName>
    <label>Lost Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>