force-app/main/default/objects/Opportunity/fields/Medium_of_Scope_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Medium_of_Scope_Acceptance__c</fullName>
    <label>Medium of Scope Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In the meeting</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>