force-app/main/default/objects/Opportunity/fields/Meeting_Actions__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Actions__c</fullName>
    <description>Duplicate of Actions__c, will need to be merged. Actions taken from the disco meeting</description>
    <label>Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>