force-app/main/default/objects/Opportunity/fields/Meeting_Assets_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Assets_Liabilities__c</fullName>
    <description>Duplicate of Assets_Liabilities__c, need to merge. Record high level detail of a clients assets and liabilities after discovery meeting</description>
    <label>Assets &amp; Liabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>