force-app/main/default/objects/Opportunity/fields/Meeting_Family_health__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Family_health__c</fullName>
    <label>Family &amp; health</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>