force-app/main/default/objects/Opportunity/fields/Meeting_Held_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Partners should check this box to confirm that the meeting took place</inlineHelpText>
    <label>Meeting Held Confirmation</label>
    <type>Checkbox</type>
</CustomField>