force-app/main/default/objects/Opportunity/fields/Meeting_Other_items__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Other_items__c</fullName>
    <label>Other items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>