force-app/main/default/objects/Opportunity/fields/Meeting_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recording_URL__c</fullName>
    <inlineHelpText>The meeting recording should be downloaded and saved into the Discovery Meeting G-Drive folder. You should then copy the link of the G-Drive recording into this field.</inlineHelpText>
    <label>Meeting Recording URL</label>
    <type>Url</type>
</CustomField>