force-app/main/default/objects/Opportunity/fields/Meeting_Regulatory_concerns__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Regulatory_concerns__c</fullName>
    <label>Regulatory concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>