force-app/main/default/objects/Opportunity/fields/Meeting_Soft_facts__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Soft_facts__c</fullName>
    <label>Soft facts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>