force-app/main/default/objects/Opportunity/fields/Meetng_Sales_aids__c.field-meta.xml
<CustomField>
    <fullName>Meetng_Sales_aids__c</fullName>
    <label>Sales aids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>