force-app/main/default/objects/Opportunity/fields/New_or_Existing_client__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_client__c</fullName>
    <label>New or Existing client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>