force-app/main/default/objects/Opportunity/fields/Non_standard_issues__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_issues__c</fullName>
    <label>Non-standard issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>