force-app/main/default/objects/Opportunity/fields/Objectives_Goals__c.field-meta.xml
<CustomField>
    <fullName>Objectives_Goals__c</fullName>
    <label>Objectives &amp; Goals</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>