force-app/main/default/objects/Opportunity/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <description>Partner Observations from the meeting</description>
    <inlineHelpText>Things that you picked up on in the meeting that may be missed by the meeting recording and the meeting notes.</inlineHelpText>
    <label>Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>