force-app/main/default/objects/Opportunity/fields/OctopusMoneyRecord__c.field-meta.xml
<CustomField>
    <fullName>OctopusMoneyRecord__c</fullName>
    <formula>IF(ISPICKVAL( Account.GroupCompany__c , &quot;OM&quot;) &amp;&amp; ( RecordType.DeveloperName = &apos;Advice_Opportunity&apos; || RecordType.DeveloperName = &apos;OW_acquisition&apos; ), CASESAFEID(AccountId), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OM Record</label>
    <type>Text</type>
</CustomField>