force-app/main/default/objects/Opportunity/fields/Opp_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Opp_Additional_Notes__c</fullName>
    <description>Any additional notes to be captured after discovery meeting</description>
    <label>Additional notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>