force-app/main/default/objects/Opportunity/fields/Opp_Advised_Plan__c.field-meta.xml
<CustomField>
    <fullName>Opp_Advised_Plan__c</fullName>
    <label>Advised Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>