force-app/main/default/objects/Opportunity/fields/Opp_Assets_in_report__c.field-meta.xml
<CustomField>
    <fullName>Opp_Assets_in_report__c</fullName>
    <description>Potentially delete</description>
    <label>Assets in report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>