force-app/main/default/objects/Opportunity/fields/Opp_Base_Plan_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Opp_Base_Plan_Assumptions__c</fullName>
    <description>Potentially delete</description>
    <label>Base plan assumptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>