force-app/main/default/objects/Opportunity/fields/Opp_Discovery_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Discovery_Call_Date__c</fullName>
    <label>Discovery Call Date</label>
    <type>Date</type>
</CustomField>