force-app/main/default/objects/Opportunity/fields/Opp_Discovery_Questionnaire_type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Discovery_Questionnaire_type__c</fullName>
    <description>Potentially delete - old fact find process</description>
    <label>Discovery questionnaire type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>