force-app/main/default/objects/Opportunity/fields/Opp_Meeting_Booked_on_Discovery_Call__c.field-meta.xml
<CustomField>
    <fullName>Opp_Meeting_Booked_on_Discovery_Call__c</fullName>
    <label>Meeting Booked on Discovery Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>