force-app/main/default/objects/Opportunity/fields/Opp_Planning_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opp_Planning_Opportunities__c</fullName>
    <label>Planning Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>