force-app/main/default/objects/Opportunity/fields/Opp_Send_Discovery_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Opp_Send_Discovery_Questionnaire__c</fullName>
    <label>Generate Discovery Questionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>