force-app/main/default/objects/Opportunity/fields/Opportunity_Discovery_Deck_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Discovery_Deck_URL__c</fullName>
    <description>Record the URL of the meeting recording in Google Drive.</description>
    <label>Discovery deck URL</label>
    <type>Url</type>
</CustomField>