force-app/main/default/objects/Opportunity/fields/Opportunity_Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Initial_Fee__c</fullName>
    <label>Initial Fee to be charged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>