force-app/main/default/objects/Opportunity/fields/Opportunity_Initial_Fee_amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Initial_Fee_amount__c</fullName>
    <inlineHelpText>Max £2,000</inlineHelpText>
    <label>Initial Fee amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>