force-app/main/default/objects/Opportunity/fields/Opportunity_Things_that_could__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Things_that_could__c</fullName>
    <label>Things that could have gone better</label>
    <type>TextArea</type>
</CustomField>