force-app/main/default/objects/Opportunity/fields/Other_hard_facts__c.field-meta.xml
<CustomField>
    <fullName>Other_hard_facts__c</fullName>
    <label>Other hard facts</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>