force-app/main/default/objects/Opportunity/fields/Other_items__c.field-meta.xml
<CustomField>
    <fullName>Other_items__c</fullName>
    <label>Other items</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>