force-app/main/default/objects/Opportunity/fields/OW_date_precise_fp_fact_find_sent__c.field-meta.xml
<CustomField>
    <fullName>OW_date_precise_fp_fact_find_sent__c</fullName>
    <description>Date fact find was sent to mortgage client in PreciseFP</description>
    <label>Date PreciseFP fact find sent</label>
    <type>Date</type>
</CustomField>