force-app/main/default/objects/Opportunity/fields/OW_deposit__c.field-meta.xml
<CustomField>
    <fullName>OW_deposit__c</fullName>
    <label>Deposit</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>