force-app/main/default/objects/Opportunity/fields/OW_interest_rate__c.field-meta.xml
<CustomField>
    <fullName>OW_interest_rate__c</fullName>
    <label>Interest rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>